Intermittent comm/mail/base/test/browser/browser_toolsMenu.js | uncaught exception - Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIMsgMailNewsUrl.folder] at HandleMDNResponse@chrome://messenger/content/msgHdrView.js:4330:19
Categories
(Thunderbird :: General, defect, P5)
Tracking
(thunderbird_esr115 unaffected)
Tracking | Status | |
---|---|---|
thunderbird_esr115 | --- | unaffected |
People
(Reporter: intermittent-bug-filer, Assigned: mkmelin)
References
Details
(Keywords: intermittent-failure, intermittent-testcase)
Attachments
(1 file)
Filed by: mkmelin [at] iki.fi
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=448606492&repo=comm-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/IqlIFwFBRtqYNY0bUFlQGQ/runs/0/artifacts/public/logs/live_backing.log
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 2•8 months ago
|
||
This can happen when the folder is removed before the url is processing. The url had a folder, but the folder was since removed... (e.g. through test cleanup procedures)
Assignee | ||
Comment 3•8 months ago
|
||
Modernizer browser_junkCommands.js which led me to find the bug.
Test cleanup will remove the folder, and url processing finishes later...
IMAP and NNTP urls also just return null.
Updated•8 months ago
|
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Updated•8 months ago
|
Assignee | ||
Updated•8 months ago
|
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/e9f33b21057f
Make mailbox url.folder return null if it doesn't exist. r=john.bieling,freaktechnik
Comment hidden (Intermittent Failures Robot) |
Description
•