Bug 1882282 - Make mailbox url.folder return null if it doesn't exist. r=john.bieling,freaktechnik

Modernizer browser_junkCommands.js which led me to find the bug.
Test cleanup will remove the folder, and url processing finishes later...
IMAP and NNTP urls also just return null.

Differential Revision: https://phabricator.services.mozilla.com/D204017

--HG--
extra : rebase_source : f38742af7a3d970a96eca0b2d5fa9ba606c82ced
extra : amend_source : d4f089e32ca10c39e652462420bc45d042b8e274